k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mushan-blog
spec:
  selector:
    app: mushan-blog
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
