k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mushan-blog
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - blog.example.com
      secretName: mushan-blog-tls
  rules:
    - host: blog.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mushan-blog
                port:
                  name: http
